Fixing timeline image on IE 10+ screens under 568px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1559,6 +1559,12 @@ header {
     }
 }
 
+@media all and (max-width: 568px) and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+    .work-hidden img {
+        width: 30rem !important;
+    }
+}
+
 /* -------------------------------------------------------------------Keyframe Animations */
 
 /* Obtained from stackoverflow
